# cpp_gituser_sample

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conan_package.sh  conanfile.txt
app/: CMakeLists.txt
app/include/: githubapp.h
app/src/: githubapp.cpp  main.cpp
github_info/: CMakeLists.txt
github_info/include/: github_error.h  github_info.h  github_info_impl.h  github_info_interface.h  github_repositories.h  github_repository.h  github_user.h  githubuser.h  httplib_requester.h  requester.h  requester_response.h
github_info/install/include/: github_info.h
github_info/src/: github_error.cpp  github_info.cpp  github_info_impl.cpp  github_repositories.cpp  github_repository.cpp  github_user.cpp  githubrepository.cpp  githubuser.cpp  httplib_requester.cpp
github_info/tests/: CMakeLists.txt  unit_tests.cpp
github_info/tests/include/: mock_requester.h
github_info/tests/src/: mock_requester.cpp  unit_tests.cpp  unit_tests_repos.cpp  unit_tests_users.cpp
package/: conanfile.py
package/include/: github_error.h  github_info.h  github_info_interface.h  github_repositories.h  github_repository.h  github_user.h
sample_app/: CMakeLists.txt
sample_app/include/: githubapp.h
sample_app/src/: githubapp.cpp  main.cpp
